add the executed notebook & metadata

--- a/get_OCRed_books_from_gallica.ipynb
+++ b/get_OCRed_books_from_gallica.ipynb
@@ -20,28 +20,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "23822145-7f68-4e9e-9ec7-225671728c76",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "243"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "from tqdm import tqdm\n",
     "import urllib.request\n",
+    "import csv\n",
+    "import pathlib\n",
     "\n",
     "\n",
     "urls = ['https://gallica.bnf.fr/html/und/litteratures/les-classiques-de-la-litterature-du-xviiie-siecle?mode=desktop',\n",
     "        'https://gallica.bnf.fr/html/und/litteratures/les-classiques-de-la-litterature-du-xixe-siecle?mode=desktop',\n",
     "        'https://gallica.bnf.fr/html/und/litteratures/les-classiques-de-la-litterature-du-xxe-siecle?mode=desktop']\n",
     "authors = []\n",
-    "for url in urls:\n",
+    "for century, url in enumerate(urls):\n",
     "    r = requests.get(url)\n",
     "    soup = BeautifulSoup(r.text, 'html.parser')\n",
     "\n",
     "    for link in soup.find_all(\"div\", {\"class\": \"titre\"}):\n",
     "        try:\n",
-    "            authors.append( [link.a.get('href'), link.a.get('title')] )\n",
+    "            authors.append( [str(18 + century), link.a.get('title').strip(), link.a.get('href') ] )\n",
     "        except Exception:\n",
     "            pass\n",
     "len(authors)"
@@ -57,10 +70,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d60b7f18-6b38-4045-925d-2c3ef2cfde49",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "243it [03:50,  1.06it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "def request_gallica(query, keywords, filters, startRecord=1):\n",
     "    url='https://gallica.bnf.fr/SRU'\n",
@@ -82,21 +103,21 @@
     "        r.raise_for_status()\n",
     "    return BeautifulSoup(r.text, 'lxml')\n",
     "\n",
-    "def merge_pages_of_records(soup, link):\n",
+    "def merge_pages_of_records(soup, link, author):\n",
     "    records = []\n",
     "    for record in soup.find_all(\"srw:record\"):\n",
     "        identifier = record.find('dc:identifier').text\n",
     "        title = record.find('dc:title').text\n",
     "        contributors = [s.text for s in record.find_all('dc:contributor')]\n",
     "        rights = [s.text for s in record.find_all('dc:rights')]\n",
-    "        records.append([link, identifier, title, contributors, rights])\n",
+    "        records.append([century, link, identifier, author, title, contributors, rights])\n",
     "    return records\n",
     "\n",
     "records = []\n",
     "errors = []\n",
-    "for i, (link, title) in tqdm(enumerate(authors)):\n",
+    "for i, (century, author, link) in tqdm(enumerate(authors)):\n",
     "    if link.startswith('https://gallica.bnf.fr/ark:'):\n",
-    "        records.append([link, link, title, [], []])\n",
+    "        records.append([century, link, link, author, author, [], []])\n",
     "    else:\n",
     "        parts_of_link = [str(s) for s in link.split('&')]\n",
     "        query = [s.replace('query=', '') for s in parts_of_link if s.startswith('query')]\n",
@@ -105,16 +126,16 @@
     "        try:\n",
     "            soup = request_gallica(query, keywords, filters)\n",
     "            number_of_records = int(soup.find(\"srw:numberofrecords\").text)\n",
-    "            records.extend( merge_pages_of_records(soup, link) )\n",
+    "            records.extend( merge_pages_of_records(soup, link, author) )\n",
     "            pages = number_of_records // 50\n",
     "            if pages>0 and number_of_records!=50:\n",
     "                sRecord = 51\n",
     "                for page in range(1,pages+1):\n",
     "                    sRecord += 50 \n",
     "                    soup = request_gallica(query, keywords, filters, startRecord=sRecord)\n",
-    "                    records.extend(merge_pages_of_records(soup, link))\n",
+    "                    records.extend(merge_pages_of_records(soup, link, author))\n",
     "        except Exception:\n",
-    "            errors.append([i, link, title, sRecord])"
+    "            errors.append([i, century, link, author, sRecord])"
    ]
   },
   {
@@ -127,20 +148,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7fbfa2a5-faab-4903-a5f6-e5cf7908db01",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 13524\n"
+     ]
+    }
+   ],
    "source": [
     "print( len(errors), len(records) )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "49b88f5e-4aa7-43ac-b4df-8cd355581999",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "num = 0\n",
     "for rec in records:\n",
@@ -151,21 +191,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1218d459-b19a-4400-9576-7841b5c03bfe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import csv\n",
-    "with open(\"records.csv\", \"w\", newline=\"\") as f:\n",
+    "with open(\"./metadata/records.csv\", \"w\", newline=\"\") as f:\n",
     "    writer = csv.writer(f)\n",
-    "    writer.writerow(['identifier', 'title', 'contributors', 'rights']) #'link', \n",
+    "    writer.writerow(['century', 'link', 'identifier', 'author', 'title', 'contributors', 'rights']) #'link', \n",
     "    writer.writerows(records)\n",
     "\n",
-    "with open(\"errors.csv\", \"w\", newline=\"\") as f:\n",
+    "with open(\"./metadata/errors.csv\", \"w\", newline=\"\") as f:\n",
     "    writer = csv.writer(f)\n",
-    "    writer.writerow(['index', 'link', 'title']) # , 'sRecord'\n",
-    "    writer.writerows(errors)"
+    "    writer.writerow(['index', 'century', 'link', 'author', 'startRecord']) # , 'sRecord'\n",
+    "    writer.writerows(errors)\n",
+    "\n",
+    "with open(\"./metadata/authors.csv\", \"w\", newline=\"\") as f:\n",
+    "    writer = csv.writer(f)\n",
+    "    writer.writerow(['century', 'author', 'link']) # , 'sRecord'\n",
+    "    writer.writerows(authors)"
    ]
   },
   {
@@ -178,17 +222,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a8de07e4-efb6-4d7f-ac80-2f975165b4b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 13524/13524 [16:04:46<00:00,  4.28s/it]   \n"
+     ]
+    }
+   ],
    "source": [
+    "errors2 = []\n",
     "for rec in tqdm(records):\n",
-    "    [link, url, title, contributors, license] = rec\n",
+    "    [century, link, url, author, title, contributors, license] = rec\n",
     "    if url.startswith('https://gallica.bnf.fr/ark'): \n",
     "        filename = url.replace('https://gallica.bnf.fr/', '').replace('/', '|')\n",
     "        url = url + '.texteBrut'\n",
-    "        urllib.request.urlretrieve(url, '/Users/teddy/Documents/digitale_Romanistik/data/' + filename + '.html')"
+    "        pathlib.Path('./data/' + century + '/' + author).mkdir(parents=True, exist_ok=True)\n",
+    "        try:\n",
+    "            urllib.request.urlretrieve(url, './data/' + century + '/' + author + '/' + filename + '.html')\n",
+    "        except Exception:\n",
+    "            errors2.append(rec)\n",
+    "\n",
+    "with open(\"./metadata/errors2.csv\", \"w\", newline=\"\") as f:\n",
+    "    writer = csv.writer(f)\n",
+    "    writer.writerow(['century', 'link', 'identifier', 'author', 'title', 'contributors', 'rights']) #'link', \n",
+    "    writer.writerows(errors2)"
    ]
   }
  ],
@@ -208,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
