--- a/get_metadata_for_corpus.ipynb
+++ b/get_metadata_for_corpus.ipynb
@@ -70,7 +70,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#d['results']['notice']['record']\n",
     "import xmltodict\n",
     "metadata_headers = ['identifier', 'datestamp', 'setSpec',\n",
     "            '@xmlns:dc', '@xmlns:oai_dc', '@xmlns:xsi', '@xsi:schemaLocation', 'dc:identifier',\n",
@@ -126,116 +125,7 @@
     "with open('./corpus_metadata/corpus_metadata_19.csv', 'w',newline=\"\") as f:\n",
     "    write = csv.writer(f)\n",
     "    write.writerow(metadata_headers)\n",
-    "    write.writerows(metadata_body)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d60b7f18-6b38-4045-925d-2c3ef2cfde49",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def request_gallica(query, keywords, filters, startRecord=1):\n",
-    "    url='https://gallica.bnf.fr/SRU'\n",
-    "    params = {'operation': 'searchRetrieve',\n",
-    "              'exactSearch': False,\n",
-    "              'version': '1.2',\n",
-    "              'query': query,\n",
-    "              'collapsing': True,\n",
-    "              'keywords': keywords,\n",
-    "              'startRecord': startRecord,\n",
-    "              'maximumRecords': 50,\n",
-    "              'filter': filters,\n",
-    "              }\n",
-    "    try:\n",
-    "        r = requests.get(url, params)\n",
-    "        r.raise_for_status()\n",
-    "    except Exception: # due to error 500 sometimes\n",
-    "        r = requests.get(url, params)\n",
-    "        r.raise_for_status()\n",
-    "    return BeautifulSoup(r.text, 'lxml')\n",
-    "\n",
-    "def merge_pages_of_records(soup, link, author):\n",
-    "    records = []\n",
-    "    for record in soup.find_all(\"srw:record\"):\n",
-    "        identifier = record.find('dc:identifier').text\n",
-    "        title = record.find('dc:title').text\n",
-    "        contributors = [s.text for s in record.find_all('dc:contributor')]\n",
-    "        rights = [s.text for s in record.find_all('dc:rights')]\n",
-    "        records.append([century, link, identifier, author, title, contributors, rights])\n",
-    "    return records\n",
-    "\n",
-    "records = []\n",
-    "errors = []\n",
-    "for i, (century, author, link) in tqdm(enumerate(authors)):\n",
-    "    if link.startswith('https://gallica.bnf.fr/ark:'):\n",
-    "        records.append([century, link, link, author, author, [], []])\n",
-    "    else:\n",
-    "        parts_of_link = [str(s) for s in link.split('&')]\n",
-    "        query = [s.replace('query=', '') for s in parts_of_link if s.startswith('query')]\n",
-    "        filters = [s.replace('filter=', '') for s in parts_of_link if s.startswith('filter')]\n",
-    "        keywords = [s.replace('keywords=', '') for s in parts_of_link if s.startswith('keywords')]\n",
-    "        try:\n",
-    "            soup = request_gallica(query, keywords, filters)\n",
-    "            number_of_records = int(soup.find(\"srw:numberofrecords\").text)\n",
-    "            records.extend( merge_pages_of_records(soup, link, author) )\n",
-    "            pages = number_of_records // 50\n",
-    "            if pages>0 and number_of_records!=50:\n",
-    "                sRecord = 51\n",
-    "                for page in range(1,pages+1):\n",
-    "                    sRecord += 50 \n",
-    "                    soup = request_gallica(query, keywords, filters, startRecord=sRecord)\n",
-    "                    records.extend(merge_pages_of_records(soup, link, author))\n",
-    "        except Exception:\n",
-    "            errors.append([i, century, link, author, sRecord])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7fbfa2a5-faab-4903-a5f6-e5cf7908db01",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print( len(errors), len(records) )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49b88f5e-4aa7-43ac-b4df-8cd355581999",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num = 0\n",
-    "for rec in records:\n",
-    "    if rec[1].startswith('https://gallica.bnf.fr/ark'):\n",
-    "        num += 1\n",
-    "num"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1218d459-b19a-4400-9576-7841b5c03bfe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"./metadata/records.csv\", \"w\", newline=\"\") as f:\n",
-    "    writer = csv.writer(f)\n",
-    "    writer.writerow(['century', 'link', 'identifier', 'author', 'title', 'contributors', 'rights']) #'link', \n",
-    "    writer.writerows(records)\n",
-    "\n",
-    "with open(\"./metadata/errors.csv\", \"w\", newline=\"\") as f:\n",
-    "    writer = csv.writer(f)\n",
-    "    writer.writerow(['index', 'century', 'link', 'author', 'startRecord']) # , 'sRecord'\n",
-    "    writer.writerows(errors)\n",
-    "\n",
-    "with open(\"./metadata/authors.csv\", \"w\", newline=\"\") as f:\n",
-    "    writer = csv.writer(f)\n",
-    "    writer.writerow(['century', 'author', 'link']) # , 'sRecord'\n",
-    "    writer.writerows(authors)"
+    "    write.writerows(metadata_body)"
    ]
   }
  ],
